objects/Pincode__c.object
<CustomObject>
    <fields>
        <fullName>City_Name__c</fullName>
        <label>City Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Pincode</label>
    <nameField>
        <label>Pincode</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pincode</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>